# app/src/types/FollowerResponse.go
@@ -1,0 +1,6 @@
+package types
+
+//FollowerResponse A struct to carry data for the simulator GET follower request
+type FollowerResponse struct {
+	Follows []string `json:"follows"`
+}
